--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,7 +8,7 @@
       <time class="post-date">
         {{- .Date.Format "2006-01-02" -}}
         {{- if $.Site.Params.showLastUpdated -}}
-          [{{- or $.Site.Params.updatedDatePrefix "Updated" -}} :: {{- .Lastmod.Format "2006-01-02" -}}]
+          | {{- or $.Site.Params.updatedDatePrefix "Updated" -}} {{- .Lastmod.Format "2006-01-02" -}}
         {{- end -}}
       </time>
     {{- end -}}
