remove term count from link on terms page

--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -13,7 +13,7 @@
       {{ $count := .Count }}
       {{ with $.Site.GetPage (printf "/%s/%s" $type $name) }}
         <li>
-          <a class="terms-title" href="{{ .Permalink }}">{{ .Name }} [{{ $count }}]</a>
+          <a class="terms-title" href="{{ .Permalink }}">{{ .Name }}</a> [{{ $count }}]
         </li>
       {{ end }}
       {{ end }}
