--- a/layouts/partials/mobile-menu.html
+++ b/layouts/partials/mobile-menu.html
@@ -1,5 +1,5 @@
 <ul class="menu menu--mobile">
-  <li class="menu__trigger">Menu&nbsp;▾</li>
+  <li class="menu__trigger">MENU&nbsp;▾</li>
   <li>
     <ul class="menu__dropdown">
       {{ range $.Site.Menus.main }}
