--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -1,7 +1,9 @@
 <nav class="navigation-menu">
   <ul class="navigation-menu__inner menu--desktop">
     {{ if or $.Site.Params.showMenuItems ( eq .Site.Params.showMenuItems 0 ) }}
-      {{ range first $.Site.Params.showMenuItems $.Site.Menus.main }}
+      {{ $menuItems := index $.Site.Menus "main" }}
+      {{ $sortedMenuItems := sort $menuItems "Params.identifier" }}
+      {{ range first $.Site.Params.showMenuItems $sortedMenuItems }}
         {{ if not .HasChildren }}
           <li><a href="{{ .URL }}" {{ if .Params.NewTab -}} target="_blank" {{- end }}>{{ .Name }}</a></li>
         {{ end }}
